# movie-new

./: .gitignore  Dockerfile  Dockerfile.txt  create_db.py  docker-compose.yml  init_movie_db.sql  movies.db  pyproject.toml  test.db
src/: main.py
src/core/: Configs.py
src/db/: database.py
src/logic/: movie_logic.py
src/models/: movie.py
src/repositories/: movie-repositories.py
src/schemas/: movie.py
src/services/: __init__.py  routers.py
src/services/routers/: movies.py  stats.py
