[project]
name = "movie-new"
version = "0.1.0"
description = ""
authors = [
    {name = "alirezaghaderi",email = "alirezaduckgruop@GMAIL.COM"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "movie_new", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
